/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 16:55 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

/*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Old changelogs are archived in directory
 "oldlogs".
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
*/

2025-04-14 08:30 UTC-0200 Jose Quintas jmcquintas-gmail.com
   * samples/*
      ! Samples review, name demo*, title of dialogs with source code name
      ! fix warnings -w3 -es2
      ! update scripts and references with new name
      ! all.prg can compile samples before to show
   * samples/testhgt.*
   * samples/iesample.*
   * samples/testchild.*
     ! moved to test/samples/, not usable examples for users
   * qrcode samples moved to contrib/qrcode/test
     ! specific dependencies to build and samples, user solve all at same time
   ! About new names demo*: samples are demonstration not test
   ! TODO: more samples to review, see all.prg

2025-04-13 08:00 UTC-0200 Jose Quintas jmcquintas-gmail.com
   * rename samples/demodbf.* to samples/testdemodbf.*
   * rename samples/testxmltree.* to samples/testxmltree.*
   * move contrib/qrencode/* to contrib/qrcode/qrencode/*
   * move contrib/qrdecode/* to contrib/qrcode/qrdecode/*
   * move samples/qr* to contrib/qrcode/test/*
     ! specific sample with dependencies
  * move test/iesample.* to test/samples/iesample.*
  * samples/testado.prg
  * samples/modtitle.prg
  * samples/nice2.prg
  * samples/night.prg
  * samples/pseudocm.prg
  * samples/stretch.prg
  * samples/testalert.prg
  * samples/testbmpcr.hbp
  * samples/testchild.prg
  * samples/testfunc.prg
  * samples/testget1.prg
  * samples/testini.prg
    ! fix warnings -e3 -es2, window CENTER
  * all.prg
    ! qrcode* removed from menu
  ! sorry about too renames

2025-04-13 01:30 UTC-0200 Jose Quintas jmcquintas-gmail.com
   * rename samples/arraybrowse.* to samples/testbrowsearr.*