@@ -15,6 +15,10 @@
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 */
 
+2025-04-15 10:00 UTC+0300 Alexander Kresin <alex@belacy.ru>
+  * source/gtk/draw.c
+    ! hwg_OpenImage() fixed and cleaned
+
 2025-04-14 08:30 UTC-0200 Jose Quintas jmcquintas-gmail.com
    * samples/*
       ! Samples review, name demo*, title of dialogs with source code name
